<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_goToGraphs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="278dp"
        android:layout_marginTop="652dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="31dp"
        android:text="@string/button_goToGraphs_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_val_Amplitude"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="187dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edit_Window_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/main_val_Frequency"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edit_Window_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_val_Amplitude"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_val_Amplitude"
        app:layout_constraintTop_toBottomOf="@id/main_val_Amplitude"
        app:layout_constraintVertical_bias="0.214" />

    <EditText
        android:id="@+id/main_val_Phase"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edit_Window_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_val_Frequency"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_val_Frequency"
        app:layout_constraintTop_toBottomOf="@+id/main_val_Frequency"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/main_Amplitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="597dp"
        android:text="@string/text_amplitude_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_val_Amplitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_Frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="428dp"
        android:text="@string/text_frequency_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_val_Frequency"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_Phase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phase_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_val_Phase"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

</androidx.constraintlayout.widget.ConstraintLayout>